--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
         <img src="tools/img/logo.png" class="logo">
     </div>
     <div class="asideAbout">
-<<<<<<< HEAD
-        <p>Hello, my name is Stephanie! <br>
-=======
-        <p>Hello, my name is Stephanie <br>
->>>>>>> b9ff452d051e2ed0c8b588f04782246d1cca6bd1
-        </p>
+        <p>Hello, my name is Stephanie!</p>
 
         <section id="contactinfo">
             <div class="contact">
